General lab note updates.

--- a/151t_lab_1.md
+++ b/151t_lab_1.md
@@ -199,12 +199,6 @@ git config --global protocol.file.allow always
 
 **(7)** **Run the commands below in a `bash` terminal.**
 
-The following will add necessary binaries like `firtool` to the path.
-
-```
-export PATH=$PATH:/home/ff/eecs251b/tools/install/bin/
-export LM_LICENSE_FILE=5280@license-srv.eecs.berkeley.edu:2100@license-srv.eecs.berkeley.edu:1717@license-srv.eecs.berkeley.edu
-```
 
 These next scripts may take a very long time (potentially over 30 minutes). Don't forget to `tmux`!
 
@@ -235,35 +229,36 @@ The TL;DR of these commands is that you now have a working Chipyard environment!
 >
 >Feel free to look at the scripts themselves if you want to learn more.
 
-> [!CAUTION]
-> `hammer-synopsys-plugins` and `hammer-mentor-plugins` are private repos. PLEASE DO NOT PUBLISH THEM PUBLICLY.
+
+
+The following will add necessary binaries like `firtool` to the path.
+
+```
+echo "export PATH=$PATH:/home/ff/eecs251b/tools/install/bin/" >> ~/.bashrc
+echo "export LM_LICENSE_FILE=5280@license-srv.eecs.berkeley.edu:2100@license-srv.eecs.berkeley.edu:1717@license-srv.eecs.berkeley.edu" >> ~/.bashrc
+source ~/.bashrc
+```
 
 ### Using the environment
 
 To enter your Chipyard environment, you will need to run the following command in each terminal session you open (including new `tmux` sessions).
 
 ```
-source /scratch/$USER/chipyard/env.sh
+source /scratch/$USER/<semester>-chipyard-<uname>/env.sh
 ```
 
 This env.sh file should exist in the top-level repository. This file sets up necessary environment variables such as PATH for the current Chipyard repository. This is required by future Chipyard steps such as the make system to function correctly.
 
-You may also need to change these environmental variables anew in every session you're running VLSI flows in:  
-
-```
-export PATH=$PATH:/home/ff/eecs251b/tools/install/bin/
-export LM_LICENSE_FILE=5280@license-srv.eecs.berkeley.edu:2100@license-srv.eecs.berkeley.edu:1717@license-srv.eecs.berkeley.edu
-```
 
 > [!TIP]
 > If you would like to run this automatically on terminal startup, you can add the command to your `~/.bashrc`
 > by running the following:
 >
 > ```
-> echo "source /scratch/$USER/chipyard/env.sh" >> ~/.bashrc
+> echo "source /scratch/$USER/<semester>-chipyard-<uname>/env.sh" >> ~/.bashrc
 > ```
 
-Optionally, you can also set the repo path as an environment variable by running `export chipyard=/scratch/$USER/chipyard`.
+Optionally, you can also set the repo path as an environment variable by running `export chipyard=/scratch/$USER/<semester>-chipyard-<uname>`.
 
 If you'd like to hone your bash skills, help your peers out, and get some extra credit.. try making a `~/.bashrc` file for the class to use with all of the necessary exports. 
 
@@ -273,16 +268,31 @@ If you completed the setup successfully, you can skip this section.
 
 #### `hammer-mentor-plugins`-related errors
 
-These should've been removed from this version of Chipyard, as `hammer-mentor-plugins` is a private repository. If you run into bugs, particularly during the `./build-setup.sh` step, let us know.
+These should've been removed from this version of Chipyard, as `hammer-mentor-plugins` is a private repository. If you run into bugs, particularly during the `init-vlsi.sh` step, let us know.
 
-(If you feel adventurous, you can also try fixing the problem yourself by removing `hammer-mentor-plugins` from all `.gitmodules` and the `.sh` script, but you may need to reclone Chipyard if you make some breaking changes...)
+You can also try fixing the problem yourself by doing the following..
+
+Edit the init-vlsi.sh script, such as with vim:
+
+`vim ./scripts/init-vlsi.sh`
+
+Comment out the line:
+
+`git submodule update --init --recursive vlsi/hammer`
+
+Which with vim, can be done with `i` (insert) mode then `:wq` (write then quit) once you're done.
+
+Rerun: `./scripts/init-vlsi.sh sky130`
+
+For context, the reason for this error is that we do not have a local copy of `hammer-mentor-plugins` setup and `mentor` is not an open source tool, so the online repo is private. The script tries to pull from the private repo to update the submodule and can't find it. But we're not using that tool, so we can skip it.
+
 
 #### `build-setup` transaction failed
 
 If you observe that the `conda` install transaction failed, which is often caused by stopping `./build-setup` prematurely, you will likely need to reinstall conda. To do so, reinstall `conda` by running the following commands:
 
 ```bash
-cd /scratch/$USER/chipyard
+cd /scratch/$USER/<semester>-chipyard-<uname>
 rm -rf .conda-env
 cd ..
 rm -rf conda
@@ -300,11 +310,19 @@ To resolve it, run the following from the Chipyard root directory:
 ```
 unset CONFIG_SHELL
 source env.sh
-./build-setup.sh riscv-tools -s 1 -s 2 -s 6 -s 7 -s 8 -s 9 -s 10 --force
+./build-setup.sh riscv-tools -s 1 -s 2 -s 6 -s 7 -s 8 -s 9 -s 10 
 ```
 
 This skips the steps that have already completed prior to the failure and retries the failed step.
 Proceed as usual after the command succeeds.
+
+#### Repository Issues (like `divergent branches`)
+
+When in doubt, for the sake of this lab, you can reset to the baseline with:
+
+``git reset —hard skeleton/main``
+
+You may not want to do this on your actual project as you may lose all your changes. But this Chipyard setup is just practice!
 
 ## Your first VLSI run!
 
@@ -318,5 +336,5 @@ Don't forget to complete the Gradescope check-in, and let us know on Discord if 
 
 # Credits
 
-Parts of this setup are inspired by 2022 Tapeout and 2023 EECS251B.
+Parts of this setup are inspired by Spring 2023 Tapeout and Spring 2024 EECS251B.
 Chisel and Chipyard resources have been developed outside the course.
