--- a/151t_lab_2.md
+++ b/151t_lab_2.md
@@ -275,7 +275,7 @@ You will see a whole bunch of submodules, each pointing an open-source generator
 
 To simplify things, we will not turn your core into a submodule. Instead, create this folder:  
 
-`generators/shadow-council/src/main/resources/vsrc/cores`
+`mkdir -p generators/shadow-council/src/main/resources/vsrc/cores`
 
 The filepath *has* to match, else flows may break person to person. 
 
@@ -312,7 +312,7 @@ So instead, we (specifically: elam) wrote a Makefile that will turn your CPU int
 
 **Step 1: Grab the Makefile from `Lab_2_Materials` and place it in your /cores/ directory.**
 
-Specifically, ``generators/shadow-council/src/main/resources/vsrc/cores/`.
+Specifically, `generators/shadow-council/src/main/resources/vsrc/cores/`.
 
 **Step 2: Change `proj_name` inside the Makefile**
 
@@ -352,7 +352,7 @@ You already have `generators/shadow-council/src/main/resources/vsrc/cores/`, whe
 
 You will need a Scala file for your black box. So make a file! It can have any name, such as:
 
-``generators/shadow-council/src/main/scala/MyFavoriteCoreBlackBox.scala``
+`generators/shadow-council/src/main/scala/<yourname>CoreBlackBox.scala`
 
 **Step 3: Try writing a Scala black box!**
 
@@ -378,7 +378,7 @@ Please keep your file(s) in `generators/shadow-council/src/main/scala/`. If you 
 
 You can also look at examples of how your own Chisel modules or verilog black-box modules can be integrated into a Rocket Chip-based SoC in `$chipyard/generators/chipyard/src/main/scala/example`.
 
-**Step 4: Submit your `scala` directory on Gradescope and answer any questions there may be.**
+**Step 4: Submit the absolute path, in addition to the eda machine, of your core blackbox scala file and answer any questions there may be.**
 
 # Credits
 
