--- a/151t_lab_2.md
+++ b/151t_lab_2.md
@@ -380,6 +380,12 @@ You can also look at examples of how your own Chisel modules or verilog black-bo
 
 **Step 4: Submit the absolute path, in addition to the eda machine, of your core blackbox scala file and answer any questions there may be.**
 
+
+Update: Refer to the addendum lecture for more help integrating the blackbox.
+
+TODO: Move information from addendum lecture to lab format. Ask users to compile blackbox to ensure basic clean of basic errors.
+
+
 # Credits
 
 (_This segment partially borrows from the Spring 2023 Tapeout Lab 2, particularly the writings of Jerry Zhao._)
