--- a/151t_lab_3.md
+++ b/151t_lab_3.md
@@ -18,8 +18,7 @@ other.
 
 RocketChip’s TileLink implementation is built on top of Diplomacy, a framework for exchanging
 configuration information among Chisel generators in a two-phase elaboration scheme. For a detailed
-explanation of Diplomacy, see the paper by Cook, Terpstra, and Lee (https://carrv.github.io/2017/
-papers/cook-diplomacy-carrv2017.pdf). Diplomacy is a complicated idea and we do not expect you
+explanation of Diplomacy, see the paper by Cook, Terpstra, and Lee (https://carrv.github.io/2017/papers/cook-diplomacy-carrv2017.pdf). Diplomacy is a complicated idea and we do not expect you
 to understand it fully for this lab.
 
 Diplomacy represents the different components of an SoC as nodes of a directed acyclic graph.
@@ -32,7 +31,7 @@ Memory-mapped devices generally follow a common pattern. They expose a set of re
 CPUs. By writing to a register, the CPU can change the device’s settings or send a command. By
 reading from a register, the CPU can query the device’s state or retrieve results. Register nodes are
 similar in construction to the manager nodes with additional logic to make manager nodes work as
-MMIO registers interface. It initiate TileLink transactions by sending requests on the A channel and
+MMIO registers interface. They initiate TileLink transactions by sending requests on the A channel and
 receive responses on the D channel. In Chipyard, the register node can be instantiated in Chisel as shown
 below:
 
@@ -319,7 +318,7 @@ The client node code is taken from [TileLink Node Types](https://chipyard.readth
 
 What we did so far was implicity working with a "LazyModule", which executes before all hardware gets elaborated (and is often where we'll connect a TileLink node to a crossbar). A module implementation trait is the second type of trait in Rocket Chip and often depends on the LazyModule. Similarly, we now need an implementation class to contain the actual hardware we'll be working with. 
 
-The documentation reads: "This class will normally contains Chisel RTL code. If your core is in Verilog, you will need to instantiate the black box class that wraps your Verilog implementation and connect it with the buses and other components." That sounds like us! Our hardwre is in a black box.
+The documentation reads: "This class will normally contains Chisel RTL code. If your core is in Verilog, you will need to instantiate the black box class that wraps your Verilog implementation and connect it with the buses and other components." That sounds like us! Our hardware is in a black box.
 
 **(1) Create an implemention class.**
 
@@ -565,7 +564,7 @@ One way you could think about states:
       - However, key issue is that multibeat responses can be interrupted! 
   - `Responding`: **You may want an extra state to deal with the 4 count.**
 
-For a more visual representation of the motivaiton, you can think more visually:
+For a more visual representation of the motivation, you can think more in terms of diagrams:
 
 ![](Lab_3_assets/StateMotivation.png)
 
