--- a/151t_lab_3.md
+++ b/151t_lab_3.md
@@ -552,7 +552,7 @@ One way you could think about states:
   - What happens to your memory request info (address, data, etc..)?
   - Which state do you transition to?
 - `Active`: **Waiting on TileLink Channel A.**
-  - What singal are you waiting on? 
+  - What signal are you waiting on? 
   - Where do you transition when it's true?
 - `Inflight`: **Waiting on TileLink Channel D (the response).**
   - What signal are you waiting on? 
