--- a/151t_lab_4.md
+++ b/151t_lab_4.md
@@ -18,9 +18,11 @@ After all, the whole point of TileLink is to have an interconnect for the whole 
 
 While this lab has quite a bit of reading, use it to motivate how you can modify this base design from single core to multi-core, and what the SoC may need to successfully boot up and function. _This is NOT a perfect setup, and we will need to modify it later._ Fun!
 
-## Part 4a: Chipyard SBT Files
+----
 
-### Introduction to SBT
+# Part 4a: Chipyard SBT Files
+
+## Introduction to SBT
 
 You will find in the documentation: "Chipyard is a complex framework that depends on a mix of build systems and scripts. Specifically, it relies on git submodules, on sbt build files, and on custom written bash scripts and generated files."
 
@@ -77,7 +79,7 @@ This build file defines:
 - Version 1.0
 - Dependency on scala-parser-combinators version 2.3.0
 
-### SBT in Chipyard
+## SBT in Chipyard
 
 In your the top-level of your Chipyard repository, you will find a `build.sbt` file. It reads similarly to:
 
@@ -141,7 +143,7 @@ lazy val util = (project in file("util"))
 
 You will then see, in the ``Subproject definitions``  segment, `Rocket Chip` and `Chipyard-managed External Projects` submodules. Again, you're welcome to read into the documentation, but all of this is simply a way to simplify compilation and dependencies. You are no worse off if you simply pattern match whenever you need to add your own module.
 
-### Your SBT changes 
+## Your SBT changes 
 
 Speaking of which, that's what we need to do right now!
 
@@ -165,9 +167,11 @@ lazy val PROJECT_NAME = (project in file("generators/PROJECT_NAME"))
 
 And that's it! That's a lot of reading for a small change, hence why you don't need to be too familiar with `sbt`. 
 
-## Part 4b: Configs
+----
 
-### Introduction to Configs 
+# Part 4b: Configs
+
+## Introduction to Configs 
 
 ![](Lab_4_assets/ConfigInArch.png)
 
@@ -223,7 +227,7 @@ That is, instead of hard coding `rowBits = 64`, we can now reference `SystemBusK
 
 Hm...
 
-#### A Bit of a Deeper Look 
+### A Bit of a Deeper Look 
 
 At this point, you are likely to get confused. Maps? Keys? Where is all this coming from? The documentation [has a page for these](https://chipyard.readthedocs.io/en/stable/Customization/Keys-Traits-Configs.html#keys-traits-and-configs) that may not be intro friendly. Many people will take the code for granted and pattern match what seems to work until intuition builds up. 
 
@@ -296,7 +300,7 @@ make find-config-fragments
 
 **In summary, if you look around Chipyard, you will find many files that define these `Config` objects and provide named settings. Then there's additional settings that combine those partial Configs into complete configurations that supply all the key-value pairs needed to generate a particular design. That's how the nested key-value hierarchy works!**
 
-#### Are you tired of reading yet?..
+### Are you tired of reading yet?..
 
 There's more complexity to be found here of course, for the determined.. 
 
@@ -308,7 +312,7 @@ The other part, is that instead of having this particular `Int` `nExt`, you can 
 
 **In summary, you are able to overlay keys, replace what was there previously, and have keys that look up other keys. And you can comvine those together to do stuff that is "probably slightly too fancy", in Henry's words..**
 
-#### "Mixins" and the Cake analogy
+### "Mixins" and the Cake analogy
 
 You can glaze over `Views` and `keys` if they don't help you, but do glance at the [1.3.3. Cake Pattern / Mixin](https://chipyard.readthedocs.io/en/stable/Chipyard-Basics/Configs-Parameters-Mixins.html#parameters) documentation. Some excerpts:
 
@@ -322,7 +326,7 @@ As we finish up focusing on the core, understanding `class DigitalTop` (and in t
 
 But for now, let's move on from readings!
 
-### Your Custom Core Config
+## Your Custom Core Config
 
 From Lab 3, you should now have a Scala file (`OFOTile.scala` or such) containing:
 
@@ -411,7 +415,7 @@ class With_MY_GENERATOR_Cores(cores: Seq[MY_CORE_PARAMS]) extends Config((site, 
 
 Make sure you are using the names that make sense for your project, such as pulling `MY_CORE_PARAMS` from the `val core:` you wrote in your `TileParams` class. 
 
-#### Complete the `With_MY_GENERATOR_Cores` Config
+### Complete the `With_MY_GENERATOR_Cores` Config
 
 If you'd really like, you can try reading the documentation and doing this yourself in some better way. However, this particular setup is pretty unique to the scenario of adding custom cores to the SoC, so we've tried to implement it for you instead. **Note that this setup does not yet work for multicore, so think critically about every step - how can you help make the transition?** What is currently missing? This is part of the reason why there's so many explanations at every line.
 
@@ -519,9 +523,9 @@ This is a helpful construct you will recognize in different parts of Chipyard. S
 
 ``require(config.size % blockBytes == 0)``
 
-### Fire Off to Top Level! 
+## Fire Off to Top Level! 
 
-#### Introduction to Rocket Config 
+### Introduction to Rocket Config 
 
 It's great that we have this Config, but it's not yet nested into a top-level Config, so it's not being used. Recall your overview of [1.3. Configs, Parameters, Mixins, and Everything In Between](https://chipyard.readthedocs.io/en/stable/Chipyard-Basics/Configs-Parameters-Mixins.html) earlier. There's somewhat of an explanation of Rocket Chip Configs in [3.9. Rocket-Chip Generators](https://chipyard.readthedocs.io/en/stable/Generators/Rocket-Chip-Generators.html), but it'll be easier to understand by looking at the Scala itself. 
 
@@ -563,7 +567,7 @@ Pay special attention to `AbstractConfig`. The `AbstractConfig` is the most gene
 
 Etc. This default is invaluable and part of the reason why you can create a whole SoC without understanding every detail of it!
 
-#### Creating your SoC Configuration
+### Creating your SoC Configuration
 
 **(1)** **Copy over the Rocket Configs template**
 
@@ -635,7 +639,7 @@ This should be the easiest one!
 
 ``Note: we may need to change this, as it's not proven working. We may need to use a simpler config in the next lab for verification.``
 
-### No, bring me to the REAL Top Level! 
+## No, bring me to the REAL Top Level! 
 
 Again recall your overview of [1.3. Configs, Parameters, Mixins, and Everything In Between](https://chipyard.readthedocs.io/en/stable/Chipyard-Basics/Configs-Parameters-Mixins.html) earlier, this time focusing on `DigitalTop`. You can see it at `generators/chipyard/src/main/scala/DigitalTop.scala`.
 
@@ -670,13 +674,23 @@ But we'll go into this more when doing verification.
 
 # Credits
 
-Some of the images used in this document come from the ISCA 2023 Chipyard tutorial.
-Some information is taken from Henry Cook's Chisel Conference 2018 Rocket Chip presentation.
+Some of the images used in this document come from an ISCA 2023 Chipyard tutorial (likely private):
+
+- 2: ["SoC Architecture and Components", ISCA 2023, Jerry Zhao.](https://docs.google.com/presentation/d/1L1qZAWrmwDzdZjeATT14WbpVSePEb_kH/edit#slide=id.p1)
+
+- 3: ["Generating and Simulating Custom SoCs", ISCA 2023, Jerry Zhao.](https://docs.google.com/presentation/d/1JgkhiyqWGCEa0ZTHQ3zyY7TvqCzlFw9h/edit#slide=id.p76)
+
+Some information is taken from Henry Cook's Chisel Conference 2018 Rocket Chip presentation (public but may or may not be information overload):
+
+- ["Rocket Chip Intensive (Architecture Track)", Chisel Community Conference 2018, Henry Cook.](https://www.youtube.com/watch?v=Eko86PGEoDY&t=1748s)
 
 Useful references:
-- Configs Parameters Mixing - https://chipyard.readthedocs.io/en/stable/Chipyard-Basics/Configs-Parameters-Mixins.html
-- 3.9. Rocket-Chip Generators - https://chipyard.readthedocs.io/en/stable/Generators/Rocket-Chip-Generators.html
-- TileLink Node Types - https://chipyard.readthedocs.io/en/stable/TileLink-Diplomacy-Reference/NodeTypes.html#node-types
-- "Diplomatic Design Patterns: A TileLink Case Study" i.e. The Diplomacy Paper - https://carrv.github.io/2017/papers/cook-diplomacy-carrv2017.pdf
-- SiFive TileLink Specification - https://static.dev.sifive.com/docs/tilelink/tilelink-spec-1.7-draft.pdf
+
+- [Chipyard Docs: 1.3. Configs, Parameters, Mixins, and Everything In Between](https://chipyard.readthedocs.io/en/stable/Chipyard-Basics/Configs-Parameters-Mixins.html)
+
+- [Chipyard Docs: 3.9. Rocket-Chip Generators](https://chipyard.readthedocs.io/en/stable/Generators/Rocket-Chip-Generators.html)
+
+- More Chipyard references: [https://github.com/ucb-bar/chipyard](https://github.com/ucb-bar/chipyard)
+
+- [https://www.scala-sbt.org/](https://www.scala-sbt.org/)
 
