--- a/151t_lab_4.md
+++ b/151t_lab_4.md
@@ -26,7 +26,9 @@ While this lab has quite a bit of reading, use it to motivate how you can modify
 
 You will find in the documentation: "Chipyard is a complex framework that depends on a mix of build systems and scripts. Specifically, it relies on git submodules, on sbt build files, and on custom written bash scripts and generated files."
 
-Generally, `sbt` (Simple Build Tool) is a command-line build tool for Scala, Java, and more. There are many build tools out there. But what is a build tool?
+Generally, `sbt` (Simple Build Tool) is a command-line build tool for Scala, Java, and more. There are many build tools out there. 
+
+**But what is a build tool?**
 
 So far you've been working with just two source files. With only a few Scala files, it's easy enough to compile with `scalac MainFile.scala` in the command line. Chipyard, however, is made up of hundreds of files. A build tool helps manage the complexity of all those compilations. `sbt` is nice becauses it uses a small number of concepts but supports flexible and powerful build definitions. If you want to read more, you can go through the Getting Started guide [here](https://www.scala-sbt.org/1.x/docs/Getting-Started.html), but the level of understanding of `sbt` you need for Chipyard is quite minimal.
 
@@ -59,7 +61,7 @@ One of the examples of a Scala-specific feature is the ability to cross build yo
 - `(project in file("path/to/module"))`: specifies the path to the module or subproject.
 - `settings`: defines the settings for the module or subproject.
 
-Here is an example build.sbt file:
+**Here is an example build.sbt file:**
 
 ````
 scalaVersion := "2.13.12"
@@ -113,11 +115,9 @@ These structures are hinted at in the **Multi-Project Builds** segment above. Yo
 
 > Each subproject in a build has its own source directories, generates its own jar file when you run package, and in general works like any other project.
 
-> A project is defined by declaring a lazy val of type Project. For example, :
-
-> lazy val util = (project in file("util"))
-
-> lazy val core = (project in file("core"))
+> A project is defined by declaring a lazy val of type Project. For example:
+> `lazy val util = (project in file("util"))`
+> `lazy val core = (project in file("core"))`
 
 In your top level `build.sbt` file, you will then also find `lazy val commonSettings`:
 
@@ -306,13 +306,15 @@ There's more complexity to be found here of course, for the determined..
 
 The way this works is that Scala has the notion of a partial function - a function only defined for some values. In this case, the places where the function is defined are the keys that are supplied. If you look up a key, Scala will go and try to match that key to something in that partial function. 
 
-So it will go through it and evaluate a bunch of case statements, and check - "Does this match? Does this match? Does this match?" - until it finds the key that does match. So even if this `DefaultSmallConfig` had a `case NExtInterrupts => 1`, because of how we've composed `MyConfig`, when I look up external interrupts I will find the new case first and that will become the value you get. Hence why we compose in a way that makes sure the foremost value is first. 
+So it will go through it and evaluate a bunch of case statements, and check - "Does this match? Does this match? Does this match?" - until it finds the key that does match. So even if this `DefaultSmallConfig` had a `case NExtInterrupts => 1`, because of how we've composed `MyConfig`, when you look up external interrupts it will find the new case first and that will become the value you get. Hence why we compose in a way that makes sure the foremost value is first. 
 
 The other part, is that instead of having this particular `Int` `nExt`, you can use `site`, `here`, and `up` functions to look up a different parameter. You can set `NExtInterrupts` to be equal to another key, such as what the number of [PLIC interrupts](https://five-embeddev.com/riscv-priv-isa-manual/Priv-v1.12/plic.html) that this Config supports is.
 
 **In summary, you are able to overlay keys, replace what was there previously, and have keys that look up other keys. And you can comvine those together to do stuff that is "probably slightly too fancy", in Henry's words..**
 
-### "Mixins" and the Cake analogy
+*Note: Different people prefer to operate at different levels of abstraction. Understanding the implementation may help you build intuition - or it may confuse you. If you prefer to operate at a higher level of abstraction, that is totally fine - you don't have to know about `Views` to use `Configs`. It is very common to simply look at other Scala files for reference and copy over what works. But the information is here if you ever want to refer to it!*
+
+## "Mixins" and the Cake analogy
 
 You can glaze over `Views` and `keys` if they don't help you, but do glance at the [1.3.3. Cake Pattern / Mixin](https://chipyard.readthedocs.io/en/stable/Chipyard-Basics/Configs-Parameters-Mixins.html#parameters) documentation. Some excerpts:
 
@@ -560,9 +562,7 @@ The annotations are your good friends! From the names, you can tell this is the 
 Pay special attention to `AbstractConfig`. The `AbstractConfig` is the most generic default, that sets up the SoC in a "mostly sane" way. For example, it sets up:
 
 - The five traditional TileLink buses (S system, P peripheral, C control, M memory, F front bus)
-
 - Peripherals such as UART (communication) and JTAG (debugging)
-
 - A 64kB scratchpad (on-chip memory) off the S-bus (system bus)
 
 Etc. This default is invaluable and part of the reason why you can create a whole SoC without understanding every detail of it!
@@ -693,4 +693,3 @@ Useful references:
 - More Chipyard references: [https://github.com/ucb-bar/chipyard](https://github.com/ucb-bar/chipyard)
 
 - [https://www.scala-sbt.org/](https://www.scala-sbt.org/)
-
