cleaner setup instrucitons

--- a/151t_lab_1.md
+++ b/151t_lab_1.md
@@ -174,7 +174,14 @@ Whenever you enter an SSH session, you should start or attach to a `tmux` sessio
 
 During the `bash Miniforge3.sh` and `./build-setup.sh` commands, say "yes" and press enter when prompted.
 
-First, create your `/scratch` directory and install `conda`:
+The following will source the eecs151t bashrc (locating license and binary paths etc.) on startup moving forward.
+
+```
+echo "source /home/ff/ee198/ee198-20/.eecs151t.bashrc" >> ~/.bashrc
+source ~/.bashrc
+```
+
+Now create your `/scratch` directory and install `conda`:
 
 ```
 mkdir -m 0700 -p /scratch/$USER
@@ -188,10 +195,11 @@ Then, setup your repo.
 
 ```
 source ~/.bashrc
-git clone <YOUR SSH CLONE URL> # i.e. git@github.com:ucb-eecs151tapeout/<semester>-chipyard-<username>.git
-cd <semester>-chipyard-<username>
-git remote add skeleton https://github.com/ucb-eecs151tapeout/<semester>-chipyard.git
-git pull skeleton main
+git clone git@github.com:ucb-eecs151tapeout/ofot-chipyard.git
+cd ofot-chipyard
+git checkout -b ${USER}-working # create your own branch!
+git push --set-upstream origin ${USER}-working
+
 mamba install -n base conda-lock=1.4
 mamba activate base
 git config --global protocol.file.allow always
@@ -200,10 +208,10 @@ git config --global protocol.file.allow always
 **(7)** **Run the commands below in a `bash` terminal.**
 
 
-These next scripts may take a very long time (potentially over 30 minutes). Don't forget to `tmux`!
+These next scripts may take a very long time (potentially over 32 minutes). Don't forget to `tmux`!
 
 ```
-./build-setup.sh riscv-tools -s 6 -s 7 -s 8 -s 9 -s 10
+./build-setup.sh riscv-tools -s 8 -s 7 -s 8 -s 9 -s 10 --use-lean-conda
 source env.sh
 ./scripts/init-vlsi.sh sky130
 ```
@@ -231,20 +239,13 @@ The TL;DR of these commands is that you now have a working Chipyard environment!
 
 
 
-The following will add necessary binaries like `firtool` to the path.
-
-```
-echo "export PATH=$PATH:/home/ff/eecs251b/tools/install/bin/" >> ~/.bashrc
-echo "export LM_LICENSE_FILE=5280@license-srv.eecs.berkeley.edu:2100@license-srv.eecs.berkeley.edu:1717@license-srv.eecs.berkeley.edu" >> ~/.bashrc
-source ~/.bashrc
-```
 
 ### Using the environment
 
 To enter your Chipyard environment, you will need to run the following command in each terminal session you open (including new `tmux` sessions).
 
 ```
-source /scratch/$USER/<semester>-chipyard-<uname>/env.sh
+source /scratch/$USER/ofot-chipyard/env.sh
 ```
 
 This env.sh file should exist in the top-level repository. This file sets up necessary environment variables such as PATH for the current Chipyard repository. This is required by future Chipyard steps such as the make system to function correctly.
@@ -255,12 +256,11 @@ This env.sh file should exist in the top-level repository. This file sets up nec
 > by running the following:
 >
 > ```
-> echo "source /scratch/$USER/<semester>-chipyard-<uname>/env.sh" >> ~/.bashrc
+> echo "source /scratch/$USER/ofot-chipyard/env.sh" >> ~/.bashrc
 > ```
 
-Optionally, you can also set the repo path as an environment variable by running `export chipyard=/scratch/$USER/<semester>-chipyard-<uname>`.
-
-If you'd like to hone your bash skills, help your peers out, and get some extra credit.. try making a `~/.bashrc` file for the class to use with all of the necessary exports. 
+Optionally, you can also set the repo path as an environment variable by running `export wd=/scratch/$USER/ofot-chipyard` and then jump to it with `cd $wd`.
+Note that `export` only lasts until you close the terminal session, add a command to `~/.bashrc` to have it run every time you start a new commandline session!
 
 ### Common issues
 
@@ -320,7 +320,7 @@ Proceed as usual after the command succeeds.
 
 When in doubt, for the sake of this lab, you can reset to the baseline with:
 
-``git reset —hard skeleton/main``
+``git reset —hard origin/main``
 
 You may not want to do this on your actual project as you may lose all your changes. But this Chipyard setup is just practice!
 
@@ -330,7 +330,7 @@ From the `vlsi` folder, run:
 
 ``make lvs tutorial=sky130-commercial``
 
-Don't worry too much about what it's doing right now (although you're always welcome to read through the files.) This is just to make sure your repository is setup right.
+Don't worry too much about what it's doing right now (although you're always welcome to read through the files.) This is just to make sure your repository is setup right and you are able to invoke the tools you'll need for the class.
 
 Don't forget to complete the Gradescope check-in, and let us know on Discord if you run into any issues!
 
