Move newer versions

--- a/151t_lab_0.md
+++ b/151t_lab_0.md
@@ -1,6 +1,6 @@
 # Prelab 1) Git TL;DR 
 
-Complete the [git bootcamp assignment](https://github.com/ucb-eecs151tapeout/eecs151t-lab1-git-basics) and make a PR (pull request) to the `main` branch adding your name to STUDENTS.md! Don't forget to submit the Gradescope assignment.
+Complete the [git bootcamp assignment](https://github.com/ucb-eecs151tapeout/eecs151t-lab1-git-basics) and make a PR (pull request) to the template repo adding your name to STUDENTS.md! Don't forget to submit the Gradescope assignment.
 
 # EECS151T Tapeout (Pre)Lab 1: :wave: The Basics of GitHub 
 
